@@ -15,7 +15,7 @@
  *	   Department of Computer Science,
  *	   Australian National University.
  *
- * RCS: @(#) $Id: tkImgPhoto.h,v 1.1 2008/08/25 11:44:04 dkf Exp $
+ * RCS: @(#) $Id: tkImgPhoto.h,v 1.2 2010/02/05 22:45:03 nijtmans Exp $
  */
 
 #include "tkInt.h"
@@ -223,9 +223,9 @@ struct PhotoInstance {
  * Implementation of the Porter-Duff Source-Over compositing rule.
  */
 
-#define PD_SRC_OVER(srcColor,srcAlpha,dstColor,dstAlpha) \
+#define PD_SRC_OVER(srcColor, srcAlpha, dstColor, dstAlpha) \
 	(srcColor*srcAlpha/255) + dstAlpha*(255-srcAlpha)/255*dstColor/255
-#define PD_SRC_OVER_ALPHA(srcAlpha,dstAlpha) \
+#define PD_SRC_OVER_ALPHA(srcAlpha, dstAlpha) \
 	(srcAlpha + (255-srcAlpha)*dstAlpha/255)
 
 #undef MIN
