@@ -22,3 +22,4 @@ config.status
 *.exp
 *.manifest
 .#*
+*.a
